--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
   <modules>
     <module>customer</module>
     <module>fraud</module>
+    <module>eureka-server</module>
   </modules>
 
   <name>microservices</name>
@@ -24,6 +25,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <spring.boot.maven.plguin.version>2.5.7</spring.boot.maven.plguin.version>
     <spring.boot.dependencies.version>2.5.7</spring.boot.dependencies.version>
+    <spring.cloud-version>2020.0.3</spring.cloud-version>
   </properties>
 
   <dependencyManagement>
@@ -34,6 +36,13 @@
         <version>${spring.boot.dependencies.version}</version>
         <scope>import</scope>
         <type>pom</type>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring.cloud-version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
