--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>customer</module>
     <module>fraud</module>
     <module>eureka-server</module>
+      <module>clients</module>
   </modules>
 
   <name>microservices</name>
@@ -48,6 +49,10 @@
   </dependencyManagement>
 
   <dependencies>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
