--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
 services:
   postgres:
     container_name: postgres
-    image: postgres
+    image: postgres:13
+    mem_limit: 512m
+    mem_reservation: 128M
+    cpus: 0.5
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -12,11 +15,13 @@ services:
       - "5432:5432"
     networks:
       - postgres
-    restart: unless-stopped
 
   pgadmin:
     container_name: pgadmin
     image: dpage/pgadmin4
+    mem_limit: 512m
+    mem_reservation: 128M
+    cpus: 0.5
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
@@ -32,18 +37,111 @@ services:
   zipkin:
     image: openzipkin/zipkin
     container_name: zipkin
+    mem_limit: 512m
+    mem_reservation: 128M
+    cpus: 0.5
     ports:
       - "9411:9411"
+    networks:
+      - spring
 
   rabbitmq:
     image: rabbitmq:3.9.11-management-alpine
     container_name: rabbitmq
+    mem_limit: 512m
+    mem_reservation: 128M
+    cpus: 0.5
     ports:
       - "5672:5672"
       - "15672:15672"
+  eureka-server:
+    image: marioiw/eureka-server:latest
+    container_name: eureka-server
+    mem_limit: 512m
+    mem_reservation: 128M
+    cpus: 0.5
+    ports:
+      - "8761:8761"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - spring
+    depends_on:
+      - zipkin
 
+  apigateway:
+    image: marioiw/apigateway:latest
+    container_name: apigateway
+    mem_limit: 512m
+    mem_reservation: 128M
+    cpus: 0.5
+    ports:
+      - "8084:8084"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - spring
+    depends_on:
+      - zipkin
+      - eureka-server
+  customer:
+    image: marioiw/customer:latest
+    container_name: customer
+    mem_limit: 512m
+    mem_reservation: 128M
+    cpus: 0.5
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - spring
+      - postgres
+    depends_on:
+      - zipkin
+      - eureka-server
+      - postgres
+      - rabbitmq
+  fraud:
+    image: marioiw/fraud:latest
+    container_name: fraud
+    mem_limit: 512m
+    mem_reservation: 128M
+    cpus: 0.5
+    ports:
+      - "8082:8082"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - spring
+      - postgres
+    depends_on:
+      - zipkin
+      - eureka-server
+      - postgres
+      - rabbitmq
+  notification:
+    image: marioiw/notification:latest
+    container_name: notification
+    mem_limit: 512m
+    mem_reservation: 128M
+    cpus: 0.5
+    ports:
+      - "8083:8083"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    networks:
+      - spring
+      - postgres
+    depends_on:
+      - zipkin
+      - eureka-server
+      - postgres
+      - rabbitmq
 networks:
   postgres:
+    driver: bridge
+  spring:
     driver: bridge
 
 volumes:
